--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,4 +1,23 @@
+* { box-sizing: border-box; }
+
 body {
   margin: 0;
   padding: 0;
+}
+
+.search-bar-container {
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+    margin: 0 auto;
+    justify-content: space-between;
+    background: white;
+}
+
+.input-address {
+    flex: 1 1 auto;
+}
+
+.pindrop, .search-button {
+    flex: 0 0 auto;
 }
