--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,17 +1,23 @@
 * { box-sizing: border-box; }
+html, body {
+    height: 100%
+}
 
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .search-bar-container {
     display: flex;
     width: 100%;
-    flex-grow: 1;
+    flex-grow: 0;
     margin: 0 auto;
     justify-content: space-between;
     background: white;
+    height: 3em;
 }
 
 .input-address {
@@ -23,6 +29,17 @@ body {
 }
 
 #map { 
-	height: 250px;
+	flex: 1 1 0;
+    height: 100%;
 	width: 100%;
 }
+
+.content {
+    display: flex;
+    flex: 1 1;
+    order: 2;
+    height: 100%;
+    flex-flow: column nowrap;
+}
+
+#app { height: 100% }
