--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -22,9 +22,21 @@ body {
 
 .input-address {
     flex: 1 1 auto;
+    margin: 0.5em;
+    background: #eee;
+    font-size: 1em;
+    border: 0;
 }
 
-.pindrop, .search-button {
+input[placeholder] { padding-left: 0.5em; }
+
+.icon-container {
+    display: flex;
+    margin: 0.5em;
+    justify-content: center;
+}
+
+.search-bar-icon {
     flex: 0 0 auto;
 }
 
