--- a/client/scss/base.scss
+++ b/client/scss/base.scss
@@ -20,3 +20,45 @@ body {
 }
 
 #app { height: 100% }
+
+.details-view {
+  font-family: 'Open Sans', sans-serif;
+  padding: 1em 2em;
+  a { 
+    color: black;
+    font-weight: 700;
+    line-height: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  form > input {
+    display: block;
+  }
+  form > input[type=submit] {
+    background: black;
+    border: 0;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    margin-top: 4px;
+    padding: 6px 10px;
+  
+  }
+  form > textarea {
+    font-family: 'Open Sans', sans-serif;
+    padding: 6px;
+  }
+  svg { 
+    margin-right: 4px;
+    stroke: black;
+    stroke-width: 2px;
+    vertical-align: 1px;
+  }
+  h2 { 
+    border-bottom: 1px solid black;
+    font-weight: 400;
+    padding-bottom: 4px;
+    width: 50%;
+  }
+  
+}
