changed footer font

--- a/client/scss/footer.scss
+++ b/client/scss/footer.scss
@@ -10,6 +10,7 @@ footer .container {
 }
 
 .footer-text {
+  font-family: 'Open Sans', sans-serif;
   color: #a9d3cf;
   padding-left: 50px;
 }
@@ -26,4 +27,3 @@ a:link {color:  #a9d3cf;}      /* unvisited link */
 .city-rep {
   text-align: center;
 }
-  
