added fork me and update styling on the about page

--- a/client/scss/footer.scss
+++ b/client/scss/footer.scss
@@ -17,12 +17,8 @@ footer .container {
 
 .footer-link {
   text-decoration: none;
+  color: #a9d3cf;
 }
-
-a:link {color:  #a9d3cf;}      /* unvisited link */
-       a:visited {color:  #a9d3cf;}   /* visited link */
-       a:hover {color: #a9d3cf;}     /* mouse over link */
-       a:active {color:  #a9d3cf;}
 
 .city-rep {
   text-align: center;
