--- a/client/scss/about.scss
+++ b/client/scss/about.scss
@@ -26,7 +26,7 @@
 }
 
 .bg-green {
-  background-color: #218F2E; }
+  background-color: #009788; }
 
 .bg-blue {
   background-color: #0074d9; }
@@ -48,11 +48,13 @@
 .wrapper {
   height: 85%;
   margin-top: 5px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
+
 .return {
+
 
 }
 
@@ -62,6 +64,23 @@
 
 .issues {
 
+}
+
+.issues button {
+  font-size: 1.2em;
+  padding: 10px 30px;
+  background: #fdfdfd;
+  border: 1px solid #e6e6e6;
+  border-radius: 3px;
+  display: block;
+  box-shadow: 0 2px 3px #e4e4e4;
+  color: #009788;
+
+}
+
+.contact-button {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: #009788;
 }
 
 .faqs {
