--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,3 +1,10 @@
+// Third party styles
+@import "normalize";
+@import "skeleton";
+
+// App stylesheets
+@import "font";
+@import "typography";
 @import 'about';
 @import 'footer';
 @import 'details';
@@ -9,3 +16,4 @@
 @import "util";
 @import "spinner";
 @import "map";
+@import "sections";
