--- a/client/scss/sections.scss
+++ b/client/scss/sections.scss
@@ -2,6 +2,8 @@
   height: 500px;
 }
 
+/** HEADER **/
+
 .recycle-header {
   background:
     linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -30,25 +32,79 @@
   margin-left: 4.5px;
 }
 
+/** SECTIONS **/
+
+// SECTION 1
 .why {
   background-color: rgb(0,114,81);
   h2 { color: #fce220; }
   p { color: #fff; }
 }
+
+// SECTION 2
 .benefits {
   background-color: rgb(124,191,183);
   h2 { color: #fff; }
   p { color: #fff; }
-
+  h4 { color: #fff; margin-top: 10px; margin-left: 5px; }
 
 }
 
+.card {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+  margin: -150px;
+  float: left;
+  perspective: 500px;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.card:hover .content {
+  transform: rotateY( 180deg ) ;
+  transition: transform 0.5s;
+}
+
+.front,
+.back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  line-height: 300px;
+  color: #03446A;
+  text-align: center;
+  font-size: 60px;
+  border-radius: 5px;
+  backface-visibility: hidden;
+}
+
+.back {
+  background: #03446A;
+  color: white;
+  transform: rotateY( 180deg );
+}
+
+
+
+// SECTION 3
 .timeline {
   background-color: rgb(78,163,42);
   h2 { color: #d03772;}
   p { color: #fff; }
 }
-
+// SECTION 4
 .report {
 
 }
