--- a/client/scss/font.scss
+++ b/client/scss/font.scss
@@ -1,6 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:700);
 
 @font-face {
-  font-family: 'BebasNeue';
-  src: url('/fonts/BebasNeue-Bold.otf');
+  font-family: 'Oswald';
+  src: url('https://fonts.googleapis.com/css?family=Oswald:700');
 }
