update meta descript

--- a/client/scss/sections.scss
+++ b/client/scss/sections.scss
@@ -149,8 +149,7 @@
 
 /* Media Queries for multiple devices */
 
-/*** Phones ***
- ***************/
+/*** Phones ******************************************************************/
 
 /* ----------- iPhone 5 and 5S ----------- */
 
@@ -238,8 +237,8 @@
 
 
 
-/*** Tablets ***
- ***************/
+/*** Tablets ******************************************************************/
+
 
 /* ----------- iPad mini ----------- */
 
