debugging footer still

--- a/client/scss/sections.scss
+++ b/client/scss/sections.scss
@@ -147,6 +147,9 @@
 
 }
 
+// Footer section
+
+
 /* Media Queries for multiple devices */
 
 /*** Phones ******************************************************************/
