--- a/client/scss/footer.scss
+++ b/client/scss/footer.scss
@@ -1,12 +1,12 @@
-footer {
-  height: 35px;
-  margin-top: 3px;
-  text-size: 8px;
-  background-color: #43ab9b
-}
 
-footer .container {
-  margin: 1px;
+.footer-container {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
 }
 
 .footer-text {
