--- a/client/scss/footer.scss
+++ b/client/scss/footer.scss
@@ -1,12 +1,13 @@
 
 .footer-container {
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
   background-color: #efefef;
   text-align: center;
+
 }
 
 .footer-text {
