fixed button styling for header took text decoration off for learn button

--- a/client/scss/sections.scss
+++ b/client/scss/sections.scss
@@ -38,12 +38,18 @@
 .btn-report {
   margin-top: 50px;
   margin-right: 4.5px;
+  color: #fff;
 
 }
 
 .btn-learn {
   margin-top: 50px;
   margin-left: 4.5px;
+  color: #fff;
+}
+
+.btn-learn a {
+  text-decoration: none;
 }
 
 /** SECTIONS **/
