--- a/client/scss/typography.scss
+++ b/client/scss/typography.scss
@@ -3,6 +3,7 @@ h1 {
   font-size: 6em;
 }
 
+
 h2 {
   font-family: "BebasNeue";
   font-size: 4em;
@@ -14,4 +15,16 @@ h4 {
 
 body {
   font-family: "Lato", sans-serif;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  h4 {
+    font-size: 1.35em;
+  }
 }
